# bazel-platforms-getting-started

./: BUILD.bazel
select/: BUILD.bazel
target_compatible_with/: BUILD.bazel  linux.sh  windows.bat
